# BRICS_OODL

./: .gitignore  CMakeLists.txt  Doxyfile.in  Makefile  README  README-release  README.html  README.txt  cppunit.mk  qt.mk  readme.txt  rosdep.yaml  stack.xml
architecture/: Makefile
archivers/: Makefile
audio/: Makefile
base-kinematic/: FourSwedishWheelOmniBaseKinematic.cpp  FourSwedishWheelOmniBaseKinematic.hpp  FourSwedishWheelOmniBaseKinematicConfiguration.cpp  FourSwedishWheelOmniBaseKinematicConfiguration.hpp  WheeledBaseKinematic.cpp  WheeledBaseKinematic.hpp
bootstrap/: bootstrap
brics/: SDL.mk  SDL_net.mk
brics-3d/: DESCR  Makefile  PLIST  depend.mk  distinfo
brics-mm/: DESCR  Makefile  depend.mk
cgal/: DESCR  Makefile  PLIST  depend.mk  distinfo
cmake-modules/: FindBoostLog.cmake  (+4 more)
generic-monocular-camera/: CMakeLists.txt  CameraDeviceConfiguration.cpp  CameraDeviceConfiguration.hpp  ColorExposureConfiguration.cpp  ColorExposureConfiguration.hpp  Image2D.cpp  Image2D.hpp  Image2dData.cpp  Image2dData.hpp  ImageFormat.cpp  ImageFormat.h  ImageFormat.hpp  MonocularCameraConfiguration.cpp  MonocularCameraConfiguration.h  MonocularCameraConfiguration.hpp
hokuyo-urg/: CMakeLists.txt  DESCR  HokuyoURG.cpp  HokuyoURG.h  HokuyoURG.hpp  HokuyoURGConfiguration.cpp  HokuyoURGConfiguration.h  HokuyoURGConfiguration.hpp  Makefile  PLIST  depend.mk  manifest.xml  urg-0.8.13.zip.md5sum
hokuyo-urg/applications/: Test.cpp  gnuplot_i.cpp  plot_laserscanner_values.cpp
math/blas/files/: CMakeLists.txt
math/lapack/files/: CMakeLists.txt
mesa-swissranger/: .gitignore  CMakeLists.txt  Makefile  MesaSwissRanger.cpp  MesaSwissRanger.h  MesaSwissRanger.hpp
mesa-swissranger/applications/: Test.cpp
monocular-camera/: CMakeLists.txt  Makefile  MonocularCamera.cpp  MonocularCamera.h  MonocularCamera.hpp  PLIST  Test  depend.mk  test  test.cpp
monocular-camera/application/: CMakeLists.txt  test-console.cpp  test-viewer.cpp  test.cpp
monocular-camera/core/: CMakeLists.txt  MonocularCamera.cpp
monocular-camera/generic/: CMakeLists.txt  CameraDeviceConfiguration.hpp  ColorExposureConfiguration.hpp  Image2dData.hpp  MonocularCameraConfiguration.cpp  MonocularCameraConfiguration.hpp  MonocularCameraDefinitions.hpp
monocular-camera/generic-monocular-camera/: CMakeLists.txt  CameraDeviceConfiguration.cpp  CameraDeviceConfiguration.hpp  ColorExposureConfiguration.cpp  ColorExposureConfiguration.hpp  Image2dData.cpp  Image2dData.hpp  ImageFormat.cpp  ImageFormat.hpp  MonocularCameraConfiguration.cpp  MonocularCameraConfiguration.hpp  MonocularCameraDefinitions.hpp  MonocularCameraDefinitions.hpp~  MonocularCameraProperty.hpp  MonocularCameraPropertyFactory.hpp
monocular-camera/include/: MonocularCamera.hpp  MonocularCameraConfiguration.hpp  MonocularCameraDefinitions.hpp
monocular-camera/src/: CMakeLists.txt  CameraDeviceConfiguration.cpp  ColorExposureConfiguration.cpp  MonocularCamera.cpp  MonocularCameraConfiguration.cpp  MonocularCameraDefinitions.cpp
monocular-camera/test/: test.cpp  testCameraZMQ.c
oodl-hokuyo-urg/: .gitignore  CMakeLists.txt  HokuyoURG.hpp  HokuyoURGConfiguration.cpp  HokuyoURGConfiguration.hpp  Makefile  PLIST  manifest.xml
oodl-hokuyo-urg/applications/: Test.cpp  plot_laserscanner_values.cpp
oodl-sick-ld/: .gitignore  CMakeLists.txt  DESCR  Makefile  SickLD.cpp  SickLD.hpp  SickLDConfiguration.cpp  manifest.xml
oodl-sick-ld/applications/: Test.cpp
oodl-sick-lms-2xx/: .gitignore  CMakeLists.txt  SickLMS2xx.cpp  SickLMS2xx.hpp  SickLMS2xxConfiguration.cpp  manifest.xml
oodl-sick-lms-2xx/applications/: Test.cpp  plot_laserscanner_values.cpp
oodl-sick-s300/: .gitignore  CMakeLists.txt  Makefile  PLIST  ScannerSickS300.cpp  ScannerSickS300.hpp  SerialIO.hpp  SickS300.cpp  SickS300.hpp  manifest.xml
oodl-sick-s300/applications/: Test.cpp  plot_laserscanner_values.cpp
plot_laserscanner_values/: CMakeLists.txt  main.cpp
pmd-camcube/: .gitignore  CMakeLists.txt  PMDCamCube.cpp  PMDCamCube.h  PMDCamCube.hpp
pmd-camcube/applications/: Test.cpp
qt/: DESCR  (+4 more)
sick-ld/: CMakeLists.txt  SickLD.cpp  SickLD.h  SickLD.hpp  SickLDConfiguration.cpp  SickLDConfiguration.h  SickLDConfiguration.hpp
sick-ld/applications/: Test.cpp
sick-lms-2xx/: .gitignore  CMakeLists.txt  SickLMS2xx.cpp  SickLMS2xx.h  SickLMS2xx.hpp  SickLMS2xxConfiguration.cpp  SickLMS2xxConfiguration.h  SickLMS2xxConfiguration.hpp
sick-lms-2xx/applications/: Test.cpp  plot_laserscanner_values.cpp
sick-s300/: .gitignore  CMakeLists.txt  ScannerSickS300.cpp  ScannerSickS300.h  ScannerSickS300.hpp  SerialIO.cpp  SickS300.cpp  SickS300.h  SickS300.hpp  SickS300Configuration.cpp  SickS300Configuration.h
sick-s300-driver/: .gitignore  CMakeLists.txt  SickS300.cpp  SickS300.h  SickS300BufferMonitor.cpp  SickS300BufferMonitor.h  SickS300Message.cpp  SickS300Message.h  SickS300Utility.h
sick-s300-driver/applications/: Test.cpp
sick-s300-driver/base/: SickBufferMonitor.h  SickConfig.h  SickLIDAR.h
sick-s300/applications/: Test.cpp  plot_laserscanner_values.cpp
soem/files/: CMakeLists.txt
youbot/: .gitignore  CMakeLists.txt  EthercatMaster.cpp  EthercatMaster.hpp  ProtocolDefinitions.hpp  YouBot.cpp  YouBot.h  YouBot.hpp  YouBotBase.cpp  YouBotBase.hpp  YouBotGripper.cpp  YouBotGripper.hpp  YouBotGripperParameter.cpp  YouBotGripperParameter.hpp  YouBotJoint.cpp  YouBotJoint.h  YouBotJoint.hpp  YouBotJointConfiguration.cpp  YouBotJointConfiguration.hpp  YouBotJointParameter.cpp  YouBotJointParameter.hpp  YouBotJointParameterReadOnly.cpp  YouBotJointParameterReadOnly.hpp  YouBotJointStorage.cpp  YouBotJointStorage.hpp  YouBotManipulator.cpp  YouBotManipulator.hpp  YouBotSlaveMailboxMsg.hpp  YouBotSlaveMsg.h  YouBotSlaveMsg.hpp  youBotMasterApp.cpp
youbot/applications/: CMakeLists.txt  KeyboardRemoteControl.cpp  Test.cpp
youbot/config/: youbot-configfile.cfg
youbot/ethercat-master/: soem_driver.h  soem_driver_factory.cpp  soem_driver_factory.h  soem_master.cpp  soem_master.h
youbot/testing/: CMakeLists.txt  TestSuite.cpp  YouBotBaseTest.cpp  YouBotBaseTest.hpp
(+2397 files in other folders)
